// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.online_store.stubs.product;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

message ProductRequest {
    int64 id = 1;
}

message ProductResponse {
    int64 id = 1;
    string label = 2;
    Type type = 3;
    string url = 4;
    int64 weight = 5;
}

enum Type {
    CONVENIENCE_GOODS = 0;
    SHOPPING_GOODS = 1;
    SPECIALITY_PRODUCTS = 2;
    UNSOUGHT_GOODS = 3;
}

// Now let's define our service
service ProductService {
  rpc getOneProduct(ProductRequest) returns (ProductResponse);
}